syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sep3.grpcserver.protobuf.ticketservices";

service TicketServices {
  rpc createTicket (SeatTicketCreationRequest) returns (SeatTicketResponse);
  rpc getTicketsByTrip (TicketsByTripIdRequest) returns (TicketsResponse);
  rpc getAllUserTicket(TicketsByUserId) returns(TicketsResponse);
  rpc deleteById(TicketIdMessage)returns(TicketEmptyMessage);

}


message TicketEmptyMessage{


}
message TicketIdMessage{
  int64 id=1;
}

message TicketsByUserId{
  string email=1;
}
message TicketsByTripIdRequest {
  int64 trip_id = 1;
}

message TicketsResponse {
  repeated SeatTicketResponse tickets = 1;
}

message SeatTicketCreationRequest {
  double seat_price = 1;
  int32 total_seats = 2;
  string passenger_id = 3;
  int64 trip_id = 4;
  int64 pickup_id = 5;
  int64 dropoff_id = 6;
}

message SeatTicketResponse {
  int64 id = 1;
  double seat_price = 2;
  int32 total_seats = 3;
  string passenger_id = 4;
  int64 trip_id = 5;
  LocationMessage pickup = 6;
  LocationMessage dropoff = 7;
}
message LocationMessage{
  int64 id =1;
  string post_code = 2;
  string city = 3;
  string street_name = 4;
  string street_number = 5;
  string arrival_time = 6;
}
message TicketErrorResponse{
  int32 status = 1;
  string message = 2;
  
}